[package]
name = "starlight-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
serde = { version = "1.0.196", features = ["derive"] }
rand = "0.8.5"
ed25519-dalek-blake2-feeless = "1.0.1"
primitive-types = "0.12.2"
hex = "0.4.3"
leapfrog = { version = "0.3.0", features = ["stable_alloc"] }
bincode = "1.3.3"
priority-queue = "2.0.2"
hyper = { version = "1.2.0", features = ["server", "http1"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.114"
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.0"
blake2b_simd = "1.0.2"
reed-solomon-erasure = "6.0.0"
itertools = "0.12.1"
zstd-safe = { version = "7.0.0", features = ["experimental"] }
static_init = "1.0.3"
petgraph = { version = "0.6.4", features = ["stable_graph"], default-features = false }
toml = "0.8.12"
chrono = "0.4.35"
