[package]
name = "starlight-node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "starlight-node"
path = "src/main.rs"

[dependencies]
bitvec = "1.0.1"
rand = "0.8.5"
ed25519-dalek-blake2-feeless = "1.0.1"
primitive-types = "0.12.2"
hex = "0.4.3"
priority-queue = "2.0.2"
blake2b_simd = "1.0.2"
reed-solomon-erasure = "6.0.0"
zstd-safe = { version = "7.0.0", features = ["experimental"] }
static_init = "1.0.3"
petgraph = { version = "0.6.4", features = ["graphmap"], default-features = false }
rand_chacha = "0.3.1"
topk = "0.5.0"
blake3 = "1.5.1"
heed = { version = "0.11.0", features = ["lmdb", "lmdb-rkv-sys"], default-features = false }
memmap2 = "0.9.4"
rayon = "1.10.0"
chrono = "0.4.38"
nanoserde = "0.1.37"
bincode = "2.0.0-rc.3"
kanal = { version = "0.1.0-pre8", features = [], default-features = false }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hashing"
harness = false
