[package]
name = "starlight-node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "starlight-node"
path = "src/main.rs"

[dependencies]
bincode = "2.0.0-rc.3"
bitvec = "1.0.1"
blake2b_simd = "1.0.2"
blake3 = "1.5.1"
chrono = "0.4.38"
ed25519-dalek-blake2-feeless = { version = "1.0.1", features = ["std", "rand", "u64_backend"], default-features = false }
heed = { version = "0.11.0", features = ["lmdb", "lmdb-rkv-sys"], default-features = false }
hex = "0.4.3"
kanal = { version = "0.1.0-pre8", features = [], default-features = false }
memmap2 = "0.9.4"
nanoserde = "0.1.37"
petgraph = { version = "0.6.4", features = ["graphmap"], default-features = false }
primitive-types = "0.12.2"
priority-queue = "2.0.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
reed-solomon-erasure = "6.0.0"
static_init = "1.0.3"
topk = "0.5.0"
zstd-safe = { version = "7.0.0", features = ["experimental"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hashing"
harness = false
